# fda-drug-reviews

./: .gitignore  Dockerfile  pyproject.toml
fda/db/: engine.py  models.py
fda/db/scripts/: reset.py
fda/functions/: embed_segments.py  load_drugs.py  pdf_to_text.py  process_documents.py  query_documents.py  split_documents.py
k8s/: load_drugs.yaml  reset_db.yaml  split_docs.yaml
