[project]
name = ""
version = ""
description = ""
authors = [
    {name = "fjlanasa", email = "fjlanasa@gmail.com"},
]
dependencies = [
    "pypdf2>=3.0.1",
    "pytesseract>=0.3.10",
    "pydantic<2.0.0",
    "sqlmodel>=0.0.8",
    "psycopg2>=2.9.7",
    "black>=23.7.0",
    "ruff>=0.0.285",
    "pgvector>=0.2.1",
    "langchain>=0.0.272",
    "httpx>=0.24.1",
    "mypy>=1.5.1",
    "beautifulsoup4>=4.12.2",
    "isort>=5.12.0",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

